--- a/python_projects/Number_Guessing_Game/Dockerfile
+++ b/python_projects/Number_Guessing_Game/Dockerfile
@@ -1,7 +1,16 @@
+# Base image
 FROM python:3.12-slim
 
-WORKDIR /mywork
+# Set the working directory
+WORKDIR /app
 
-COPY . /mywork/
+# Copy application code
+COPY . /app
 
+# Ensure root user
+USER root
+
+
+
+# Command to run application
 CMD ["python", "guessing_game.py"]
